# nenormal

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
.github/: CODEOWNERS
.github/workflows/: cmake-single-platform.yml
article/: article-draft.md  article.md  easy-runtime-impl.md  habr-article.md  normal.cpp  normal.py  plan-of-article.md  play.ipynb
cmake/: settings.cmake  utilities.cmake
details/: augmentation.md  bad_rules.md  byref.md  concepts.md  examples.md  functional_composition.md  monadic.md  tristate.md
examples/: CMakeLists.txt  README.md  correct_bracket_sequence.cpp  hello_world.cpp
examples/arithmetics/: CMakeLists.txt  arithmetics.cpp  arithmetics_inplace.cpp  arithmetics_runtime.cpp  program.h
examples/collatz/: CMakeLists.txt  collatz.cpp  program.h
examples/collatz_decimal/: CMakeLists.txt  README.md  collatz_decimal.cpp  collatz_decimal_inplace.cpp  program_decimal.h
examples/collatz_mini/: CMakeLists.txt  README.md  collatz_mini.cpp  collatz_mini_2.cpp
experimental/: CMakeLists.txt  compose.cpp  compose.h  either.cpp  either.h  monadic.cpp  std_string_in_ct.cpp
include/nenormal/: augmented.h  compose.h  concepts.h  ct.h  either.h  maybe.h  nenormal.h  rules.h  scope_exit.h  str.h  str_algo.h  substitute.h  tristate.h  utility.h
include/nenormal/inplace/: inplace_augmented.h  inplace_tristate.h
include/nenormal/rules/: arg_types.h  empty_rule.h  facade_rule.h  hidden_rule.h  machine.h  macros.h  named_rule.h  rule_concepts.h  rule_loop.h  rule_series.h  single_rule.h
pure_example/: hhh.cpp
src/: func_compose.h  func_loop.h  nenormal.cpp  size.h  static_string.h  value_type.h
tests/: CMakeLists.txt  arithmetics.cpp  augmented.cpp  compose.cpp  concepts.cpp  correct_bracket_sequence.cpp  either.cpp  hello_world.cpp  maybe.cpp  rule_loop.cpp  rules.cpp  str.cpp  str_algo.cpp  substitute.cpp  test_func_compose.cpp  test_func_loop.cpp  test_static_strings.cpp  tristate.cpp  utils.h
tests/arithmetics/: README.md  arithmetics.cpp  arithmetics_runtime.cpp  program.h
tests/collatz/: README.md  collatz.cpp  program.h
tests/rules/: CMakeLists.txt  augmentation_ctors.cpp  empty_rule.cpp  hidden_rule.cpp  rule_loop.cpp  rule_series.cpp  rules.cpp  utils.h
